[metadata]
name = diffusion
version = 0.0.7

[options]
include_package_data = True
packages = 
	diffusion
	diffusion.generate
	diffusion.utils

install_requires =
    numpy
    diffusers 
	transformers 
	scipy 
	ftfy 
	accelerate 
	controlnet_aux 
	mediapipe
	opencv-contrib-python
	torch

[options.entry_points]
console_scripts =
    generate = diffusion.main:main
    